--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -63,24 +63,22 @@
 
             <div class="header container-sm mt-3">
                 <div class="row">
-                    <div class="col">
-                        <a href="/" class="btn btn-outline-dark border-dark border-5" aria-current="page" th:text="#{about}">About</a>
+                    <div class="col-sm-12 col-md-6 col-lg-4 col-xl-4 col-xxl-2">
+                        <a href="/" class="btn " aria-current="page" th:text="#{about}">About</a>
                     </div>
-                    <div class="col">
+                    <div class="col-sm-12 col-md-6 col-lg-4 col-xl-4 col-xxl-2">
                         <a href="/attractions" class="btn btn-outline-dark border-dark border-5" aria-current="page" th:text="#{attractions}">Attractions</a>
                     </div>
-                    <div class="col">
+                    <div class="col-sm-12 col-md-6 col-lg-4 col-xl-4 col-xxl-2">
                         <a href="/services" class="btn btn-outline-dark border-dark border-5" aria-current="page" th:text="#{services}">Services</a>
                     </div>
-
-                    <div class="col">
+                    <div class="col-sm-12 col-md-6 col-lg-4 col-xl-4 col-xxl-2">
                         <a href="/location" class="btn btn-outline-dark border-dark border-5" aria-current="page" th:text="#{location}">Location</a>
                     </div>
-
-                    <div class="col">
+                    <div class="col-sm-12 col-md-6 col-lg-4 col-xl-4 col-xxl-2">
                         <a href="/pricing" class="btn btn-outline-dark border-dark border-5" aria-current="page" th:text="#{pricing.and.availability}">Pricing and Availability</a>
                     </div>
-                    <div class="col">
+                    <div class="col-sm-12 col-md-6 col-lg-4 col-xl-4 col-xxl-2">
                         <a href="/photos" class="btn btn-outline-dark border-dark border-5" aria-current="page" th:text="#{photos}">Photos</a>
                     </div>
                 </div>
